[gd_scene load_steps=9 format=3 uid="uid://dmbyep30hpf6u"]

[ext_resource type="Script" path="res://scripts/spawnables/fire_projectile.gd" id="1_66bvr"]
[ext_resource type="Texture2D" uid="uid://cerxps0hobp2r" path="res://assets/images/spawnables/fire_projectile.png" id="2_cm68x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_pffu7"]
atlas = ExtResource("2_cm68x")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_30tau"]
atlas = ExtResource("2_cm68x")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4yae6"]
atlas = ExtResource("2_cm68x")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_dmhjo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pffu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_30tau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pffu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4yae6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_oipbn"]
radius = 33.0

[sub_resource type="CircleShape2D" id="CircleShape2D_342wp"]
radius = 33.0606

[node name="FireProjectile" type="CharacterBody2D"]
scale = Vector2(0.5, 0.5)
collision_layer = 2
collision_mask = 0
motion_mode = 1
script = ExtResource("1_66bvr")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dmhjo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_oipbn")

[node name="DamageArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource("CircleShape2D_342wp")

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="DamageArea" to="." method="_on_damage_area_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
